# Apple-CLIs

./: .gitignore  Apple-CLIs.code-workspace  CHANGELOG.md  Cargo.toml  README.md  publish.nu  test-bundle.nu  test.nu
.cargo/: config.toml
docs/inline/: TODO.md  command_error.md  command_success.md  must_use_command_output.md
example-bundle/: .gitignore  Cargo.toml  test-bundle.nu
example-bundle/src/: main.rs
examples/: ios-deploy-detect.rs  security-find-certificates.rs  simctl.rs  xcrun-simctl-list.rs
fuzz/: Cargo.toml
src/: cargo_bundle.rs  cli.rs  codesign.rs  error.rs  ios_deploy.rs  lib.rs  list_real.rs  main.rs  open.rs  productbuild.rs  security.rs  shared.rs  spctl.rs  xcodebuild.rs  xcrun.rs
src/cli/: app_path.rs  bundle_identifier.rs  device_name.rs  run.rs
src/codesign/: display.rs  sign.rs
src/codesign/display/: code_sign_output.rs  output.rs
src/codesign/display/code_sign_output/: signed_keys.rs
src/codesign/display/output/: signed_keys.rs
src/codesign/sign/: output.rs
src/ios_deploy/: detect.rs  upload.rs
src/ios_deploy/upload/: output.rs
src/open/: well_known.rs
src/security/: find_certificate.rs
src/shared/: cmd.rs  identifiers.rs  traits.rs  types.rs
src/shared/identifiers/: device_name.rs  generation.rs  m_gen.rs  m_status.rs  model_name.rs  num_generation.rs  screen_size.rs
src/shared/identifiers/device_name/: ipad.rs  iphone.rs
src/shared/identifiers/generation/: m_gen.rs  num_generation.rs
src/spctl/: assess.rs
src/spctl/assess/: output.rs
src/xcrun/: simctl.rs
src/xcrun/simctl/: boot.rs  install.rs  launch.rs  list.rs
src/xcrun/simctl/boot/: boot_output.rs  output.rs
src/xcrun/simctl/install/: output.rs
src/xcrun/simctl/launch/: output.rs
src/xcrun/simctl/list/: output.rs
tests/: availability-errors.json  codesign-display.txt  device-names.json  generate-test-data.nu  model-names.json  names.json  runtime-ids.json  simctl-list-full.json
