[package]
name = "apple-clis"
version = "0.0.1"
edition = "2021"
description = "A collection of Apple command-line tool wrappers, library and CLI"
authors = ["Caleb Yates <actuallyhappening42@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ActuallyHappening/Apple-CLIs"
publish = true
include = ["src/", "LICENSE-APACHE", "LICENSE-MIT", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bossy = "0.2.1"
camino = "1.1.6"
clap = { version = "4.5.2", features = ["derive", "env"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
smallvec = "1.13.1"
thiserror = "1.0.57"
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
