[package]
name = "apple-clis"
version = "0.0.6"
edition = "2021"
default-run = "apple-clis"
description = "A collection of Apple command-line tool wrappers, library and CLI"
authors = ["Caleb Yates <actuallyhappening42@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ActuallyHappening/Apple-CLIs"
publish = true
include = ["src/", "LICENSE-APACHE", "LICENSE-MIT", "/examples", "docs/inline/*"]

[workspace]
exclude = ["example-bundle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bossy = "0.2.1"
camino = { version = "1.1.6", features = ["serde", "serde1"] }
clap = { version = "4.5.2", features = ["derive", "env"] }
clap_complete = "4.5.1"
clap_complete_nushell = "4.5.1"
color-eyre = "0.6.3"
dirs = "5.0.1"
ext-trait = "1.0.1"
glob = "0.3.1"
nom = "7.1.3"
once-cell-regex = "0.2.1"
openssl = "0.10.64"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
smallvec = "1.13.1"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.57"
toml = "0.8.10"
tracing = { version = "0.1.40", features = ["log"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
which = "6.0.0"
