[package]
name = "apple-clis"
version = "0.0.7"
edition = "2021"
default-run = "apple-clis"
description = "A collection of Apple command-line tool wrappers, library and CLI"
authors = ["Caleb Yates <actuallyhappening42@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ActuallyHappening/Apple-CLIs"
publish = true
include = ["src/", "LICENSE-APACHE", "LICENSE-MIT", "/examples", "docs/inline/*"]

[workspace]
exclude = ["example-bundle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clap_complete", "dep:clap_complete_nushell", "dep:color-eyre", "dep:clap-cargo", "glob"]
clap-cargo = ["dep:clap-cargo"]

[[bin]]
name = "apple-clis"
required-features = ["cli"]
path = "src/main.rs"

[dependencies]
bossy = "0.2.1"
camino = { version = "1.1.6", features = ["serde", "serde1"] }
clap = { version = "4.5.2", features = ["derive", "env"], optional = true }
clap-cargo = { version = "0.14.0", optional = true }
clap_complete = { version = "4.5.1", optional = true }
clap_complete_nushell = { version = "4.5.1", optional = true }
color-eyre = { version = "0.6.3", optional = true }
dirs = "5.0.1"
ext-trait = "1.0.1"
glob = { version = "0.3.1", optional = true }
nom = "7.1.3"
openssl = "0.10.64"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.57"
time = { version = "0.3.34", features = ["parsing", "serde", "macros"] }
toml = "0.8.10"
tracing = { version = "0.1.40", features = ["log"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
which = "6.0.0"
